# hex-event

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
bindings/py/: README.md  pyproject.toml
bindings/py/src/levents/: __init__.py  cli.py  client.py  models.py
bindings/py/src/levents_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bindings/py/tests/: test_client.py
bindings/ts/: .eslintrc.cjs  package.json  tsconfig.json
bindings/ts/examples/node/: basic.ts
bindings/ts/src/: client.ts  index.ts  types.ts
doc/: codex_instructions.md
levents/: Cargo.toml
levents/levents-core/: Cargo.toml
levents/levents-core/src/: lcu.rs  lib.rs  live_client.rs
levents/levents-daemon/: Cargo.toml  build.rs
levents/levents-daemon/proto/: events.proto
levents/levents-daemon/src/: grpc.rs  main.rs
levents/levents-model/: Cargo.toml
levents/levents-model/src/: lib.rs  schema.rs
