[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "levents-py"
version = "0.0.1"
description = "Python client SDK for the levents daemon"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "levents contributors" }]
dependencies = [
  "grpcio>=1.66.1",
  "pydantic>=2.9.2",
  "typer>=0.12.5"
]

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "mypy>=1.12.1",
  "pytest>=8.3.3"
]

[project.scripts]
levents = "levents.cli:app"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
