[package]
name = "levents-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
hyper.workspace = true
levents-model = { path = "../levents-model" }
parking_lot.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
xxhash-rust.workspace = true
futures-core.workspace = true
