[package]
name = "levents-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
levents-core = { path = "../levents-core" }
levents-model = { path = "../levents-model" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
