[package]
name = "levents-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
levents-core = { path = "../levents-core" }
levents-model = { path = "../levents-model" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { version = "0.9", features = ["transport"] }
prost = "0.11"
prost-types = "0.11"
async-stream.workspace = true
futures-util.workspace = true
futures-core.workspace = true
serde_json.workspace = true

[build-dependencies]
tonic-build = "0.9"
protoc-bin-vendored = "3.2.0"
